--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,26 +6,17 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:background="#ff0000ff"
-        android:id="@+id/frameLayout">
-
-        <ExpandableListView
-            android:layout_width="210dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/displayList"
-            android:layout_gravity="right|center_vertical"
-            android:textAlignment="center"
-            android:dividerHeight="10dp"
-            android:divider="#ffff0000"/>
+        android:id="@+id/frameLayout"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="226dp"
-            android:layout_height="331dp"
+            android:layout_height="378dp"
             android:layout_gravity="top|left"
             android:weightSum="1">
 
@@ -56,70 +47,32 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/playerNumber"
                 android:textColor="#ffffffff" />
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Team:"
-                android:id="@+id/teamTitle"
-                android:textColor="#ffffffff" />
-
-            <Spinner
-                android:layout_width="match_parent"
+                android:text="Player Position:"
+                android:id="@+id/positionTitle"
+                android:textColor="#ffffffff"
+                android:textIsSelectable="false" />
+            <EditText
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
-                android:id="@+id/teamSelector"
-                android:background="#ffffffff"
-                android:focusableInTouchMode="false" />
+                android:id="@+id/playerPosition"
+                android:textColor="#ffffffff" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Add Player"
-                android:id="@+id/addPlayer" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="234dp"
-            android:layout_height="258dp"
-            android:layout_gravity="left|bottom">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Team Name:"
-                android:id="@+id/teamNameTitle"
-                android:textColor="#ffffffff"
-                android:textIsSelectable="false" />
-
-            <EditText
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/team"
-                android:textColor="#ffffffff" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Team Name:"
-                android:id="@+id/locationTitle"
-                android:textColor="#ffffffff"
-                android:textIsSelectable="false" />
-
-            <EditText
-                android:layout_width="140dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/teamLocation"
-                android:textColor="#ffffffff" />
-
+                android:id="@+id/addPlayer"
+                />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add Team"
-                android:id="@+id/addTeam" />
-
-
+                android:text="View Players"
+                android:id="@+id/viewPlayers"
+                android:onClick="viewPlayers"/>
 
         </LinearLayout>
 
@@ -127,14 +80,97 @@
             android:orientation="vertical"
             android:layout_width="315dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center">
+            android:layout_gravity="right|center_vertical">
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:id="@+id/imageView"
-                android:layout_gravity="center_horizontal" />
+                android:id="@+id/imageView" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Please Select A Team."
+                android:id="@+id/teamDisplay"
+                android:textColor="#ffffffff"
+                android:textSize="25dp" />
         </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="261dp"
+            android:layout_height="564dp"
+            android:layout_gravity="center">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="47dp"
+                android:text="Select Team:"
+                android:id="@+id/teamTitle"
+                android:textColor="#ffffffff"
+                android:layout_gravity="center_horizontal|top"
+                android:textSize="40dp"
+                android:textAlignment="center" />
+
+            <Spinner
+                android:layout_width="227dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/teamSelector"
+                android:background="#ffffffff"
+                android:focusableInTouchMode="false"
+                android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:id="@+id/textView" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/addTeamLayout">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Team Name:"
+                    android:id="@+id/teamNameTitle"
+                    android:textColor="#ffffffff"
+                    android:textIsSelectable="false" />
+
+                <EditText
+                    android:layout_width="140dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/team"
+                    android:textColor="#ffffffff" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Team Location:"
+                    android:id="@+id/locationTitle"
+                    android:textColor="#ffffffff"
+                    android:textIsSelectable="false" />
+
+                <EditText
+                    android:layout_width="140dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/teamLocation"
+                    android:textColor="#ffffffff" />
+
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Add Team"
+                    android:id="@+id/addTeam"
+                    android:onClick="addTeam" />
+
+
+
+            </LinearLayout>
+        </LinearLayout>
+
     </FrameLayout>
 
 </RelativeLayout>
