--- a/app/src/main/res/layout/activity_player_list.xml
+++ b/app/src/main/res/layout/activity_player_list.xml
@@ -4,9 +4,129 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="soccergame.assignment2.playerList">
+    tools:context="soccergame.assignment2.playerList"
+    android:background="#ffff0000">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="277dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right|center_vertical"
+            android:weightSum="1">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:id="@+id/playerPic"
+                android:layout_weight="0.27" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:text="Select A Player"
+                android:id="@+id/playerInfo"
+                android:layout_weight="0.27"
+                android:textColor="#ffffffff"
+                android:textSize="25dp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Goal"
+                android:id="@+id/addGoals" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Assist"
+                android:id="@+id/addAssists"
+                android:singleLine="false" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Save"
+                android:id="@+id/addSaves" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add Foul"
+                android:id="@+id/addFoul" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="277dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="left|top"
+            android:weightSum="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Select Team:"
+                android:id="@+id/teamTitle"
+                android:layout_weight="0.14"
+                android:textColor="#ffffffff"
+                android:textSize="20dp" />
+
+            <Spinner
+                android:layout_width="227dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/teamSelector"
+                android:background="#ffffffff" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Back"
+                android:id="@+id/backButton"
+                android:onClick="goBack"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="277dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal|top"
+            android:weightSum="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Select Player:"
+                android:id="@+id/playerTitle"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.13"
+                android:textColor="#ffffffff"
+                android:textSize="20dp" />
+
+            Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/playerSelector"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="0.13" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Next Player"
+                android:id="@+id/nextPlayer" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Begin Game"
+                android:id="@+id/playGame" />
+        </LinearLayout>
+
+    </FrameLayout>
 </RelativeLayout>
