--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="#ff0000ff">
 
     <FrameLayout
         android:layout_width="fill_parent"
@@ -85,7 +86,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:id="@+id/imageView" />
+                android:id="@+id/teamPic"
+                android:scaleType="fitCenter"/>
 
             <TextView
                 android:layout_width="match_parent"
